--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ a:focus {
 button:focus-visible,
 input:focus-visible,
 a:focus-visible {
-  outline: 2px solid #16a34a;
+  outline: 2px solid #3c914d;
   outline-offset: 2px;
 }
 
